{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 36,
  "lineage": "dfac8ef0-1c99-fdec-054f-3d23103d94f3",
  "resources": [
    {
      "module": "module.argocd",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "argocd_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd/argocd-ingress",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.class": "nginx",
                  "nginx.ingress.kubernetes.io/backend-protocol": "HTTPS",
                  "nginx.ingress.kubernetes.io/ssl-redirect": "true"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "argocd-ingress",
                "namespace": "argocd",
                "resource_version": "1814",
                "uid": "cb2c30b5-842e-409e-a192-910f2ad86c32"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "argocdproject.duckdns.com",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "argocd-server",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 443
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_eks_cluster_auth.eks",
            "module.argocd.helm_release.argocd",
            "module.eks.aws_eks_cluster.eks",
            "module.eks.aws_iam_role.eks",
            "module.eks.aws_iam_role_policy_attachment.eks",
            "module.eks.aws_security_group.eks_cluster",
            "module.node_groups.aws_eks_node_group.general",
            "module.node_groups.aws_iam_role.nodes",
            "module.node_groups.aws_iam_role_policy_attachment.cni_policy",
            "module.node_groups.aws_iam_role_policy_attachment.registry_read_only",
            "module.node_groups.aws_iam_role_policy_attachment.worker_node_policy",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:590183919160:security-group/sg-04861eb97b749483f",
            "description": "Security group for EKS cluster control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04861eb97b749483f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow external access to API server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "590183919160",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-eks-cluster-sg"
            },
            "tags_all": {
              "Name": "eks-eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cce14b89e023cd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:590183919160:internet-gateway/igw-0be05118a6c1ca274",
            "id": "igw-0be05118a6c1ca274",
            "owner_id": "590183919160",
            "tags": {
              "Name": "eks-igw"
            },
            "tags_all": {
              "Name": "eks-igw"
            },
            "vpc_id": "vpc-01cce14b89e023cd6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d3c9501075e4112",
            "arn": "arn:aws:ec2:eu-north-1:590183919160:instance/i-0f745f063b16735a6",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f745f063b16735a6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-034c12d1ac9e755d4",
            "private_dns": "ip-10-0-1-109.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.109",
            "public_dns": "ec2-13-61-154-234.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.61.154.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c9bb19d1d918f570",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-076acc50acf08a4ed",
            "tags": {
              "Name": "eks-nat-instance"
            },
            "tags_all": {
              "Name": "eks-nat-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09da163e77ec18f3e"
            ]
          },
          "dependencies": [
            "module.nat.aws_security_group.nat",
            "module.nat.data.aws_ami.amazon_linux_2",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:590183919160:security-group/sg-09da163e77ec18f3e",
            "description": "Allow NAT Instance to forward traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09da163e77ec18f3e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.3.0/24",
                  "10.0.4.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "10.0.3.0/24",
                  "10.0.4.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "eks-nat-sg",
            "name_prefix": "",
            "owner_id": "590183919160",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-nat-sg"
            },
            "tags_all": {
              "Name": "eks-nat-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cce14b89e023cd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_to_nat_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-081da283aad8cd8841080289494",
            "instance_id": "i-0f745f063b16735a6",
            "instance_owner_id": "590183919160",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-034c12d1ac9e755d4",
            "origin": "CreateRoute",
            "route_table_id": "rtb-081da283aad8cd884",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat.aws_instance.ec2_instance",
            "module.nat.aws_security_group.nat",
            "module.nat.data.aws_ami.amazon_linux_2",
            "module.route.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_to_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0be05118a6c1ca274",
            "id": "r-rtb-0be48712a36e946561080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0be48712a36e94656",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.route.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:590183919160:route-table/rtb-081da283aad8cd884",
            "id": "rtb-081da283aad8cd884",
            "owner_id": "590183919160",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-private-route-table"
            },
            "tags_all": {
              "Name": "eks-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cce14b89e023cd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:590183919160:route-table/rtb-0be48712a36e94656",
            "id": "rtb-0be48712a36e94656",
            "owner_id": "590183919160",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-public-route-table"
            },
            "tags_all": {
              "Name": "eks-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cce14b89e023cd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce2c8c94a164b96e",
            "route_table_id": "rtb-081da283aad8cd884",
            "subnet_id": "subnet-0915c144bb81a2744"
          },
          "dependencies": [
            "module.route.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04eb800e756ec5db0",
            "route_table_id": "rtb-081da283aad8cd884",
            "subnet_id": "subnet-09f601ee07f983604"
          },
          "dependencies": [
            "module.route.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cd173172ebcc65c",
            "route_table_id": "rtb-0be48712a36e94656",
            "subnet_id": "subnet-076acc50acf08a4ed"
          },
          "dependencies": [
            "module.route.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9aaadfc361b2afc",
            "route_table_id": "rtb-0be48712a36e94656",
            "subnet_id": "subnet-06bc75d2ceb1b22bd"
          },
          "dependencies": [
            "module.route.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:590183919160:subnet/subnet-0915c144bb81a2744",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0915c144bb81a2744",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183919160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-private-1"
            },
            "tags_all": {
              "Name": "eks-private-1"
            },
            "vpc_id": "vpc-01cce14b89e023cd6"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:590183919160:subnet/subnet-09f601ee07f983604",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f601ee07f983604",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183919160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-private-2"
            },
            "tags_all": {
              "Name": "eks-private-2"
            },
            "vpc_id": "vpc-01cce14b89e023cd6"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:590183919160:subnet/subnet-076acc50acf08a4ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076acc50acf08a4ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590183919160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-public-1"
            },
            "tags_all": {
              "Name": "eks-public-1"
            },
            "vpc_id": "vpc-01cce14b89e023cd6"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:590183919160:subnet/subnet-06bc75d2ceb1b22bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bc75d2ceb1b22bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590183919160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-public-2"
            },
            "tags_all": {
              "Name": "eks-public-2"
            },
            "vpc_id": "vpc-01cce14b89e023cd6"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:590183919160:vpc/vpc-01cce14b89e023cd6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-003b19ff25a136c88",
            "default_route_table_id": "rtb-08a7a133c8ce81076",
            "default_security_group_id": "sg-04784450f75779e12",
            "dhcp_options_id": "dopt-019b11a4192ec1bce",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01cce14b89e023cd6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08a7a133c8ce81076",
            "owner_id": "590183919160",
            "tags": {
              "Name": "eks-vpc"
            },
            "tags_all": {
              "Name": "eks-vpc"
            }
          }
        }
      ]
    }
  ]
}